fixing of light and dark mode with scripts

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,17 +26,21 @@ header img {
 }
 
 .headerimg{
-    width: 20vmin;;
+    width: 20vmin;
 }
 
 #themeToggle{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     background-color: cyan;
-    width: 2.5rem;
-    height: 2.5rem;
-    font-size: 1rem;
-    border-radius: 50%;
+    width: 4rem;
+    height: 2rem;
+    font-size: 1.5rem;
+    border-radius: 1rem;
     transition: color 0s ease, background-color 0s ease;
 } 
+
 #signinbtn, 
 #signUpbtn{
     background-color: cyan;
@@ -53,7 +57,6 @@ header img {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-    padding-right: .5rem;
     width: 20vmin;
 }
 
@@ -213,11 +216,17 @@ nav.light {
 }
 
 #collapseBtn.light,
-#themeToggle.light,
 #signinbtn.light,
 #signUpbtn.light {
     background-color: magenta;
 }
+
+#themeToggle.light{
+    justify-content: flex-end;
+    background-color: magenta;
+}
+
+
 
 #selectors.light {
     color: white;
